Fix paragraph spacings in about page

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -16,6 +16,7 @@
     font-weight: $font-weight-regular;
     line-height: $font-line-height-body;
     color: $color-text;
+    margin: $spacing-unit-medium 0;
 }
 
 .about__text--lead,
